--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,8 @@ a:hover {
 .imagem-carousel {
   object-fit: cover;
   object-position: 0 60%;
-  height: 25rem;
- 
+  height: 0 0 0 25;
+   
 }
 
 .link-sobre{
